Adicionando ingredientes por meio do state - ainda com problema

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,8 +1,8 @@
 .burger {
-    width: 40%;
+    width: 30%;
     margin: auto;
     height: 250px;
-    overflow: scroll;
+    overflow: hidden;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
